Refactored getdata and history controllers
