# models/fuelgasmodel.go
@@ -3,20 +3,20 @@ package models
 import "time"
 
 type GetManualFuelGas struct {
-	Id                int
-	Name              string
-	Description       string
-	Value             *float64
-	Timestamp         *time.Time
-	Tag               string
-	LastUpdateDate    *time.Time      `gorm:"column:timestamp_insert"`
-	UpdateHistoryJSON *string         `gorm:"column:update_history" json:"-"`
-	UpdateHistory     []UpdateHistory `gorm:"-"`
+	Id             int
+	Name           string
+	Description    string
+	Value          *float64
+	Timestamp      *time.Time
+	Tag            string
+	LastUpdateDate *time.Time `gorm:"column:timestamp_insert"`
+	//UpdateHistoryJSON *string         `gorm:"column:update_history" json:"-"`
+	//UpdateHistory     []UpdateHistory `gorm:"-"`
 }
 
 type UpdateHistory struct {
-	TimestampInsert time.Time `json:"TimestampInsert"`
-	Value           *float64  `json:"Value,string"`
+	TimestampInsert time.Time `gorm:"column:timestamp_insert"`
+	Value           *float64
 }
 
 type SetManualFuelGas struct {
